<?xml version="1.0"?>
<package>
	<name>mesh_to_pointcloud</name>
	<version>0.1.0</version>
	<description>
		The mesh_to_pointcloud package offers conversion of mesh files to PCL pointclouds using OpenSceneGraph.
		Supported file types: .3dc .3ds .asc .ac .bsp .dae .dw .dxf .fbx .flt .gem .geo .iv .ive .logo .lwo .lw .lws .md2 .obj .ogr .osg .pfb .ply .shp .stl .x .wrl ...
		http://trac.openscenegraph.org/projects/osg/browser/OpenSceneGraph/trunk/src/osgPlugins
		http://trac.openscenegraph.org/projects/osg/wiki/Support/UserGuides/Plugins
	</description>
	<maintainer email="carloscosta.cmcc@gmail.com">Carlos Miguel Correia da Costa</maintainer>
	<license>BSD</license>
	<author email="carloscosta.cmcc@gmail.com">Carlos Miguel Correia da Costa</author>

	<buildtool_depend>catkin</buildtool_depend>
	<build_depend>libpcl-all-dev</build_depend>
	<build_depend>libopenscenegraph-dev</build_depend>
	<run_depend>libpcl-all</run_depend>
	<run_depend>libopenscenegraph-dev</run_depend>
</package>
